# discrete-event-simulation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  carwash.py  main.py  pyproject.toml  requirements.txt
results/: exercise_2.txt
scripts/: exercise_2.py  exercise_2_5.py  exercise_3.py  exercise_4.py  exercise_4_plot.py  hello.py  main.py  plot_exercise_2.py  plot_exercise_2_5.py  statistical_tests.py
src/discrete_event_sim/: plots.py
